# cf-like

./: .bazelrc  .clangd  .gitignore  BUILD.bazel  README.md  WORKSPACE  brpc_workspace.bzl  config.json
JS/: codeforces.js
proto/: feed.proto  http.proto
src/: http_server.cpp  main.cpp
src/client/: cfClient.cpp  cfClient.h
src/com/: baseStrategy.h  context.h  dataType.h
src/constant/: status.h
src/data/: cfProblems.cpp  cfProblems.h
src/handler/: server.cpp  server.h
src/strategy/: strategy.h
src/strategy/recall/: MetricProcessor.cpp  RecallProcessor.cpp
src/util/: jsonUtils.h  metricManager.h  timeWheel.cpp  timeWheel.h
