# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Thie empty BUILD.bazel file is required to make Bazel treat
# this directory as a package.
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")


# pb的编译
proto_library(
    name = "proto",
    srcs = [
        "proto/http.proto",
    ],
)
# 将pb编译声明为一个依赖dep
cc_proto_library(
    name = "cc_proto",
    deps = [
        ":proto",
    ],
)

# 二进制文件的依赖依赖于上面声明的dep
cc_binary(
    name = "cf-like",
    srcs = [
        "src/http_server.cpp",
    ],
    deps = [
        ":cc_proto",
        "@apache_brpc//:brpc",
        "@apache_brpc//:bthread",
        "@apache_brpc//:bvar",
        "@apache_brpc//:butil",
    ],
    data = [
        "cert.pem",
        "key.pem",
    ]

)

refresh_compile_commands(
    name = "refresh_compile_commands",
    # 指定目标 target 及其编译选项/参数（.bazelrc 中已有的参数/选项无需重复添加）
    targets = {
      "//:cc_proto":"",  
      "//:cf-like": ""
    },
)